# NSWConfiguration

./: #CMakeLists.txt.original#  .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.original  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  NswMonitoring_is_info.xml  README.md  TESTS.md  fix_targets.cmake  ideas.cpp  ideas.txt  packages.txt  setup.sh  test_vmm.json
.gitlab/ci/: base.yml  build-and-test.yml  build.yml  code-quality.yml  test.yml
NSWConfiguration/: #ConfigSender.h#  ADDCConfig.h  ARTConfig.h  CommandNames.h  CommandSender.h  Concepts.h  ConfigConverter.h  ConfigConverterGbtx.h  ConfigReader.h  ConfigReaderApi.h  ConfigReaderJsonApi.h  ConfigReaderOracleApi.h  ConfigSender.h  ConfigSenderRoc.h  ConfigTranslation.h  ConfigTranslationMap.h  Constants.h  DBToValueMapping.h  FEBConfig.h  FEConfig.h  GBTxConfig.h  GBTxRegisterMap.h  GitWrapper.h  I2cFECodec.h  I2cFEConfig.h  I2cMasterConfig.h  I2cRegisterMappings.h  I2cRegisterMappingsTP.h  I2cSender.h  IsUtility.h  Issues.h  L1DDCConfig.h  Literals.h  MMFE8Config.h  MemfileReader.h  NSWConfig.h  NSWConfigRc.h  NSWConfigurationControllerRc.h  NSWMonitoringControllerRc.h  NSWOutOfRunMonitoringRc.h  (+29 more)
NSWConfiguration/hw/: ADDC.h  ART.h  ConfigurationTracker.h  DeviceManager.h  FEB.h  GBTx.h  GBTxI2c.h  GBTxIC.h  Helper.h  L1DDC.h  MMTP.h  MMTP_v1.h  MMTP_v2.h  OpcClientPtr.h  OpcConnectionBase.h  OpcManager.h  PadTrigger.h  ROC.h  Router.h  SCAInterface.h  SCAX.h  STGCTP.h  ScaAddressBase.h  ScaStatus.h  TDS.h  TP.h  TPCarrier.h  VMM.h
NSWConfiguration/monitoring/: CarriertpInRunStatusRegisters.h  Config.h  Helper.h  IsPublisher.h  MmtpInRunStatusRegisters.h  MmtpOutRunStatusRegisters.h  PadTriggerRegisters.h  RocConfigurationRegisters.h  RocStatusRegisters.h  StgctpInRunStatusRegisters.h  Utility.h  (+1 more)
UaoClientForOpcUaSca/: .gitlab-ci.yml  CMakeLists.txt  README.md
UaoClientForOpcUaSca/demo/: CMakeLists.txt  build.sh  demo.cpp  demo_adc_samples.cpp  demo_send_bitfile.cpp
app/: #calibrate_trimmers.cpp#  #calibrate_trimmers_multirms.cpp.original#  #threshold_parallel.py#  GBTxTest.cpp  NSWConfigRc_main.cpp  NSWConfigurationControllerRc_main.cpp  NSWMonitoringControllerRc_main.cpp  NSWOutOfRunMonitoringRc_main.cpp  NSWRecoveryControllerRc_main.cpp  NSWSCAServiceRc_main.cpp  NSWSectorControllerRc_main.cpp  addc_skeleton.cpp  align_addc_and_tp.cpp  calibrate_trimmers.cpp  calibrate_trimmers_multirms.cpp  calibrate_trimmers_multirms.cpp.edited  calibrate_trimmers_multirms.cpp_org  calibrate_trimmers_multirms.cpp_org2  calibrate_trimmers_multirms_191.cpp  calibrate_trimmers_multirms_191.cpp.save  calibrate_trimmers_multirms_BB5.cpp  calibrate_trimmers_multirms_maria.cpp  calibrate_trimmers_multirms_new.cpp  calibrate_trimmers_multirms_old.cpp  calibrate_trimmers_multirms_stgc.cpp  calibrate_trimmers_multirms_stgc_withSCA.cpp  calibrate_trimmers_threaded.cpp  check_gpio.cpp  configure_addc.cpp  configure_carrier.cpp  configure_frontend.cpp  configure_gbtx.cpp  configure_luts.py  configure_mmfe8.cpp  configure_rim_l1ddc.cpp  configure_roc.cpp  configure_roc_classified.cpp  configure_tp.cpp  convert_json.cpp  demo_opc_client.cpp  (+51 more)
data/: GBTX_cfg_reg_extclk_rev02_110117.txt  dummy_config.json  dummy_config.xml  gbtxConfig.json  gbtxRegisterMap.csv  integration_config.json  mmfe8_config.json  roc_dummy_config.json  sTGC_config.json
dev/: #mm_baselines_full_small_sector.sh#  #mm_baselines_layer.sh#  12pFEB_card1.py  12pFEB_card1.sh  12sFEB_card1.sh  191_mm_baselines.sh  191_mm_dev_baselines.sh  191_mm_recovery_thresholds.sh  191_mm_thresholds.sh  3pFEB_card1.sh  3sFEB6_card1.sh  auto_test_template.py  benchreadout.py  benchreadout.py_org  benchreadoutcard1.py  mm_baselines.plot.py  mm_baselines.py  mm_baselines.sh  mm_baselines_FAST191.plot.py  mm_baselines_NEW.plot.py  mm_baselines_NEW_LM.plot.py  mm_baselines_NEW_SM.plot.py  mm_baselines_NEW_rotation.plot.py  mm_baselines_PCB.sh  mm_baselines_from_trimmers.sh  mm_baselines_full_small_sector.sh  mm_baselines_layer.sh  mm_baselines_layer_FULL.sh  mm_baselines_layer_FULL_test.sh  mm_baselines_layer_R.sh  mm_baselines_layer_ROTATION.sh  mm_baselines_layer_ROTATION_singleLVDB.sh  mm_baselines_one_layer_old.sh  mm_baselines_recovery.sh  mm_maria.sh  mm_threshold_calib.sh  mm_threshold_calib_FULL.sh  mm_threshold_calib_FULL_ROTATION.sh  mm_threshold_calib_FULL_maria.sh  mm_threshold_calib_FULL_x12.sh  (+30 more)
info/: NswConfiguration.schema.xml  NswMonitoring.schema.xml
schema/: NSWConfig.schema.xml  NSWConfigurationController.schema.xml  NSWMonitoringController.schema.xml  NSWOutOfRunMonitoring.schema.xml  NSWRecoveryController.schema.xml  NSWSCAService.schema.xml  NSWSectorController.schema.xml  NswMonitoring_is_info.xml
scripts/: newschema.vim  newschema_keys.vim
src/: #ConfigSender.cpp#  ADDCConfig.cpp  ARTConfig.cpp  ConfigConverter.cpp  ConfigConverterGbtx.cpp  ConfigReader.cpp  ConfigReaderApi.cpp  ConfigReaderJsonApi.cpp  ConfigReaderOracleApi.cpp  ConfigSender.cpp  ConfigSenderRoc.cpp  ConfigTranslation.cpp  DBToValueMapping.cpp  FEBConfig.cpp  FEConfig.cpp  GBTxConfig.cpp  GitWrapper.cpp  I2cFECodec.cpp  I2cFEConfig.cpp  I2cInterface.cpp  I2cMasterConfig.cpp  I2cSender.cpp  IsUtility.cpp  L1DDCConfig.cpp  MMFE8Config.cpp  MemfileReader.cpp  NSWConfig.cpp  NSWConfigRc.cpp  NSWConfigurationControllerRc.cpp  NSWMonitoringControllerRc.cpp  NSWOutOfRunMonitoringRc.cpp  NSWRecoveryControllerRc.cpp  NSWSCAServiceRc.cpp  NSWSectorControllerRc.cpp  OKSDeviceHierarchy.cpp  OpcClient.cpp  OpcManager.cpp  PadTriggerSCAConfig.cpp  ROCCodec.cpp  ROCConfig.cpp  (+14 more)
src/hw/: TP.cpp  (+26 more)
test/: TP_testRegisterConfig.json  create_test_module.sh  run_unit_tests.py  runcpplint.py  test_config_translation.cpp  test_configreader.cpp  test_configreader.json  test_configtranslation.cpp  test_constants.cpp  test_febhw.cpp  test_i2cmasterconfig.cpp  test_jsonapi.cpp  test_jsonapi.json  test_padtrigger.cpp  test_padtrigger.json  test_scageoidentifier.cpp  test_utility.cpp  test_vmm.json  test_vmmcodec.cpp  test_vmmconfig.cpp
(+58 files in other folders)
